--- a/style.css
+++ b/style.css
@@ -15,3 +15,15 @@
     padding-left: 3px;
     margin-left: 400px;
 }
+
+body {
+    background-color: rgb(161, 174, 219);
+}
+
+.navbar-light {
+    background-color: rgb(81, 122, 184);
+}
+
+a {
+    color: rgb(128, 45, 10);
+}
