--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 .mininav {
     float: right;
     padding-left: 3px;
-    margin-left: 400px;
+    margin-left: 660px;
 }
 
 body {
@@ -26,4 +26,13 @@ body {
 
 a {
     color: rgb(128, 45, 10);
+}
+
+#user_name {
+    color: rgb(50, 55, 59);
+}
+
+#listsInfo {
+    color: rgb(42, 86, 139);
+    font-weight: bold;
 }
