--- a/style.css
+++ b/style.css
@@ -44,15 +44,28 @@ a {
 }
 
 tr,
-th,
 td {
-    padding: auto;
+    padding: 10px;
     border: 1px solid black;
+    background-color: rgb(165, 178, 198);
 }
 
-.description {
+th {
+    padding: 10px;
+    border: 0.5px solid black;
+    background-color: rgb(124, 135, 145);
+    ;
+}
+
+.thdescription {
     width: 750px;
     padding: 10px;
+}
+
+.description:focus {
+    background-color: rgb(165, 178, 198);
+    outline: 1px solid rgb(165, 178, 198);
+    border: 1px solid rgb(165, 178, 198);
 }
 
 .srNo {
@@ -60,8 +73,10 @@ td {
     padding: 4px;
 }
 
-.status {
-    text-decoration: none;
+input[type="checkbox"] {
+    height: 30px;
+    width: 70px;
+    accent-color: rgb(81, 184, 131);
 }
 
 span {
@@ -69,4 +84,17 @@ span {
     font-size: 30px;
     padding: 4px;
     color: rgb(255, 0, 0);
+}
+
+#task_name {
+    color: rgb(0, 0, 0);
+    background-color: rgb(136, 151, 174);
+}
+
+#task_name:focus {
+    outline: 1px solid rgb(16, 19, 18);
+}
+
+#btnAdd {
+    background-color: rgb(81, 122, 184);
 }
